# CubeIdeTemplate

./: .cproject  .gitignore  .mxproject  .project  CMakeLists.txt  README.md
Atollic/: EvolutionBoard.elf.launch
Hardware/Atollic/: .mxproject  STM32F401RB_FLASH.ld
Hardware/TrueStudio/: Debug_STM32F401RB_FLASH.ld  EvolutionBoard.elf.launch
Logic/: CMakeLists.txt  README.md
Logic/Conan/: conanfile.py
Project/: .cproject  .mxproject  .project  CubeIdeTemplate Debug.launch
Project/Atollic/: .cproject  .mxproject  Debug_STM32F401RB_FLASH.ld  EvolutionBoard.elf.launch  EvolutionBoard.ioc
Project/Atollic/Drivers/STM32F4xx_HAL_Driver/Inc/: stm32f4xx_hal_adc.h
Project/Atollic/Inc/: FreeRTOSConfig.h  main.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h
Project/Atollic/Src/: main.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c
Project/Hardware/Atollic/: AtollicTemplate.elf.launch  AtollicTemplate.ioc  STM32F401RB_FLASH.ld
Project/Hardware/Atollic/Inc/: main.h  stm32f4xx_it.h
Project/Hardware/Atollic/Src/: main.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c
Project/Hardware/CubeIde/: CubeIdeTemplate.ioc  README.md  readme.html
Project/Hardware/CubeIde/Inc/: stm32u5xx_hal_conf.h
Project/Hardware/CubeIde/STM32CubeIDE/: STM32U585AIIXQ_FLASH.ld
Project/Hardware/CubeIde/STM32CubeIDE/Application/Startup/: startup_stm32u585aiixq.s
Project/Hardware/CubeIde/Src/: main.c  stm32u5xx_hal_msp.c
Project/Template/: template.cxx
Test/WhiteBox/: CMakeLists.txt  main.cxx
Tests/WhiteBox/: CMakeLists.txt  CMakeUserPresets.json
Tests/WhiteBox/Conan/: conanfile.py
Tests/WhiteBox/Hardware/Fixtures/: AppFixture.cxx  AppFixture.hxx
conan/: conanbuildinfo.cmake  conanbuildinfo.txt  conanfile.py  conaninfo.txt  graph_info.json
trunk/: .cproject  .project
trunk/Atollic/: STM32F401RB_FLASH.ld
trunk/Atollic/Drivers/STM32F4xx_HAL_Driver/Inc/: stm32f4xx_hal_def.h
trunk/Atollic/Drivers/STM32F4xx_HAL_Driver/Inc/Legacy/: stm32_hal_legacy.h
trunk/Atollic/Src/: freertos.c  main.c  stm32f4xx_hal_msp.c
